--- a/tests/pdal/capi/CMakeLists.txt
+++ b/tests/pdal/capi/CMakeLists.txt
@@ -8,7 +8,7 @@ set(DEPENDENCIES pdal_c)
 set(TESTS
 	PipelineTest
 	PointLayoutTest
-	PointViewCollectionTest
+	PointViewIteratorTest
 	PointViewTest
 )
 
