--- a/tests/pdal/capi/PointLayoutTest.c.in
+++ b/tests/pdal/capi/PointLayoutTest.c.in
@@ -17,6 +17,7 @@ SUITE(PointLayoutTest);
 
 static PDALPipelinePtr gPipeline = NULL;
 static PDALPointViewPtr gPointView = NULL;
+static PDALPointLayoutPtr gLayout = NULL;
 
 static void setupPointLayoutTest(void *arg)
 {
@@ -43,6 +44,11 @@ static void setupPointLayoutTest(void *arg)
 				if (PDALHasNextPointView(views))
 				{
 					gPointView = PDALGetNextPointView(views);
+
+					if (gPointView)
+					{
+						gLayout = PDALGetPointViewLayout(gPointView);
+					}
 				}
 			}
 
@@ -61,6 +67,7 @@ static void teardownPointLayoutTest(void *arg)
 
 TEST testPDALGetDimSize(void)
 {
+	ASSERT(gLayout);
 	size_t size = PDALGetDimSize(NULL, NULL);
 	ASSERT_EQ(0, size);
 
@@ -71,6 +78,9 @@ TEST testPDALGetDimSize(void)
 	{
 		size = PDALGetDimSize(NULL, types[i]);
 		ASSERT_EQ(0, size);
+
+		size = PDALGetDimSize(gLayout, types[i]);
+		ASSERT(size > 0);
 	}
 
 	PASS();
@@ -78,11 +88,41 @@ TEST testPDALGetDimSize(void)
 
 TEST testPDALGetDimPackedOffset(void)
 {
+	ASSERT(gLayout);
+	size_t offset = PDALGetDimPackedOffset(NULL, NULL);
+	ASSERT_EQ(0, offset);
+
+	int numTypes = 3;
+	const char *types[] = {"X", "Y", "Z"};
+
+	for (int i = 0; i < numTypes; ++i)
+	{
+		offset = PDALGetDimPackedOffset(NULL, types[i]);
+		ASSERT_EQ(0, offset);
+
+		offset = PDALGetDimPackedOffset(gLayout, types[i]);
+	
+		if (strcmp(types[i], "X") == 0)
+		{
+			ASSERT_EQ(0, offset);
+		}
+		else
+		{
+			ASSERT(offset > 0);
+		}
+	}
+
 	PASS();
 }
 
 TEST testPDALGetPointSize(void)
 {
+	ASSERT(gLayout);
+	size_t size = PDALGetPointSize(NULL);
+	ASSERT_EQ(0, size);
+
+	size = PDALGetPointSize(gLayout);
+	ASSERT(size > 0);
 	PASS();
 }
 
