Remove coverage_pdal_c dir before coverage build in GitLab CI configuration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -180,6 +180,7 @@ build-x64-linux-debug-alpine:
 .job_template: &test-linux
   stage: test
   script:
+    - rm -rf coverage_pdal_c
     - make coverage_pdal_c
   cache:
     key: "$CI_JOB_NAME"
