Exclude vcpkg-based debug build from install path test

--- a/tests/pdal/capi/CMakeLists.txt
+++ b/tests/pdal/capi/CMakeLists.txt
@@ -32,6 +32,12 @@ include_directories(
 	${PDAL_INCLUDE_DIRS}
 )
 
+# Add definition if building debug with vcpkg - PDAL_PLUGIN_INSTALL_PATH points to release binaries
+string(TOUPPER "${CMAKE_BUILD_TYPE}" BUILD_TYPE_UPPERCASE)
+if (BUILD_TYPE_UPPERCASE STREQUAL "DEBUG" AND VCPKG_TARGET_TRIPLET)
+	add_definitions(-DUSING_VCPKG_DEBUG)
+endif()
+
 add_executable(${TARGET} ${SOURCES} ${HEADERS} ${CONFIG})
 set_target_properties(${TARGET} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
 
