--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,7 +76,7 @@ test-x64-windows-release:
     - set GDAL_DATA=%VCPKG_ROOT%\installed\x64-windows\share\gdal
     - set PROJ_LIB=%VCPKG_ROOT%\installed\x64-windows\share\proj4
     - copy proj_4_9.dll proj.dll
-    - "%CI_PROJECT_DIR%/build/build-x64-windows-release/bin/test_pdal_c"
+    - "%CI_PROJECT_DIR%/build/build-x64-windows-release/bin/test_pdalc"
   cache:
     key: build-x64-windows-release
     paths:
@@ -92,7 +92,7 @@ test-x64-windows-debug:
     - set GDAL_DATA=%VCPKG_ROOT%\installed\x64-windows\share\gdal
     - set PROJ_LIB=%VCPKG_ROOT%\installed\x64-windows\share\proj4
     - copy proj_4_9_d.dll proj.dll
-    - "%CI_PROJECT_DIR%/build/build-x64-windows-debug/bin/test_pdal_cd"
+    - "%CI_PROJECT_DIR%/build/build-x64-windows-debug/bin/test_pdalcd"
   cache:
     key: build-x64-windows-debug
     paths:
@@ -180,8 +180,8 @@ build-x64-linux-debug-alpine:
 .job_template: &test-linux
   stage: test
   script:
-    - rm -rf coverage_pdal_c
-    - make coverage_pdal_c
+    - rm -rf coverage_pdalc
+    - make coverage_pdalc
   cache:
     key: "$CI_JOB_NAME"
     policy: pull
@@ -199,7 +199,7 @@ test-x64-linux-release-alpine:
     - cd build/build-x64-linux-release-alpine
   artifacts:
     paths:
-      - build/build-x64-linux-release-alpine/coverage_pdal_c
+      - build/build-x64-linux-release-alpine/coverage_pdalc
 
 test-x64-linux-debug-alpine:
   <<: *test-linux
@@ -214,5 +214,5 @@ test-x64-linux-debug-alpine:
     - cd build/build-x64-linux-debug-alpine
   artifacts:
     paths:
-      - build/build-x64-linux-debug-alpine/coverage_pdal_c
+      - build/build-x64-linux-debug-alpine/coverage_pdalc
 
