--- a/tests/pdal/test_pdalc_pipeline.c.in
+++ b/tests/pdal/test_pdalc_pipeline.c.in
@@ -6,15 +6,15 @@
 #include <stdio.h>
 #include <assert.h>
 
-#include <pdal/capi/Pipeline.h>
+#include <pdal/pdalc_pipeline.h>
 
 #include "greatest.h"
 
-SUITE(PipelineTest);
+SUITE(test_pdalc_pipeline);
 
 static char *gPipelineJson = NULL;
 
-static void setupPipelineTest(void *arg)
+static void setup_test_pdalc_pipeline(void *arg)
 {
 	FILE *file = fopen("@CMAKE_BINARY_DIR@/data/stats.json", "rb");
 
@@ -35,7 +35,7 @@ static void setupPipelineTest(void *arg)
 	}
 }
 
-static void teardownPipelineTest(void *arg)
+static void teardown_test_pdalc_pipeline(void *arg)
 {
 	if (gPipelineJson)
 	{
@@ -185,10 +185,10 @@ TEST testPDALValidatePipeline(void)
 	PASS();
 }
 
-GREATEST_SUITE(PipelineTest)
+GREATEST_SUITE(test_pdalc_pipeline)
 {
-	SET_SETUP(setupPipelineTest, NULL);
-	SET_TEARDOWN(teardownPipelineTest, NULL);
+	SET_SETUP(setup_test_pdalc_pipeline, NULL);
+	SET_TEARDOWN(teardown_test_pdalc_pipeline, NULL);
 
 	RUN_TEST(testPDALCreateAndDisposePipeline);
 	RUN_TEST(testPDALExecutePipeline);
