--- a/tests/pdal/test_pdalc_pointviewiterator.c.in
+++ b/tests/pdal/test_pdalc_pointviewiterator.c.in
@@ -8,16 +8,16 @@
 
 #include "greatest.h"
 
-#include <pdal/capi/Pipeline.h>
-#include <pdal/capi/PointView.h>
-#include <pdal/capi/PointViewIterator.h>
+#include <pdal/pdalc_pipeline.h>
+#include <pdal/pdalc_pointview.h>
+#include <pdal/pdalc_pointviewiterator.h>
 
-SUITE(PointViewIteratorTest);
+SUITE(test_pdalc_pointviewiterator);
 
 static PDALPipelinePtr gPipeline = NULL;
 static PDALPointViewIteratorPtr gPointViewIterator = NULL;
 
-static void setupPointViewIteratorTest(void *arg)
+static void setup_test_pdalc_pointviewiterator(void *arg)
 {
 	FILE *file = fopen("@CMAKE_BINARY_DIR@/data/stats.json", "rb");
 	char *json = NULL;
@@ -48,7 +48,7 @@ static void setupPointViewIteratorTest(void *arg)
 	}
 }
 
-static void teardownPointViewIteratorTest(void *arg)
+static void teardown_test_pdalc_pointviewiterator(void *arg)
 {
 	PDALDisposePointViewIterator(gPointViewIterator);
 	PDALDisposePipeline(gPipeline);
@@ -124,10 +124,10 @@ TEST testPDALResetPointViewIterator(void)
 	PASS();
 }
 
-GREATEST_SUITE(PointViewIteratorTest)
+GREATEST_SUITE(test_pdalc_pointviewiterator)
 {
-	SET_SETUP(setupPointViewIteratorTest, NULL);
-	SET_TEARDOWN(teardownPointViewIteratorTest, NULL);
+	SET_SETUP(setup_test_pdalc_pointviewiterator, NULL);
+	SET_TEARDOWN(teardown_test_pdalc_pointviewiterator, NULL);
 
 	RUN_TEST(testPDALHasNextPointView);
 	RUN_TEST(testPDALGetNextPointView);
